# SafeMap

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/services/: geminiService.py  hotspotService.py
backend/app/utils/: privacyUtils.py
backend/dummy/: hotspots.json  incidents.json  insights.json  seedData.py
frontend/: .env.example
frontend/src/components/: LocationSearch.tsx  Map.tsx  ReportForm.tsx  StatsBar.tsx
frontend/src/config/: api.ts
frontend/src/services/: api.ts  nominatim.ts
