[project]
name = "safemap-backend"
version = "0.1.0"
description = "SafeMap Anonymous Safety Reporting Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.9.0",
    "numpy>=2.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
